# power-patch

./: .gitignore  CMakeLists.txt  LICENSE  Power Patch.lnk  README.md
scripts/cmake/: cmake_build_debug.bat  cmake_build_release.bat  cmake_clean_all.bat  cmake_clean_build.bat  cmake_configure.bat  cmake_install_release.bat  cmake_reconfigure.bat  project_settings.bat
scripts/oneclick/: debug_build_run.bat  release_build_run.bat
scripts/release/: dist_release.bat  package_release.bat
scripts/run/: open_solution.bat  run_debug.bat  run_release.bat
src/: PowerPatch.Core.ps1  PowerPatch.UI.ps1  app_icon.rc  constants.h  main.cpp  start.bat
src/m365_update/: m365_update.cpp  m365_update.h
src/store_update/: store_update.cpp  store_update.h
src/windows_update/: windows_update.cpp  windows_update.h
